added a navigation bar and more content on about me

--- a/REPLIT/index.html
+++ b/REPLIT/index.html
@@ -9,6 +9,23 @@
 </head>
 
 <body>
+  <nav class="nav-bar">
+
+    <div class="logo">STEVE</div>
+    <ul class="nav-links">
+      <div class="menu">
+        <li><a href="Login.html">Login</a></li>
+        <li><a href="Registration.html">Registration</a></li>
+        <li><a href="Contact.html">Contact me</a></li>
+      </div>
+    </ul>
+  </nav>
+
+  <div class="hamburger">
+    <span class="bar"></span>
+    <span class="bar"></span>
+    <span class="bar"></span>
+</div>
   <header class="masterhead">
   <!-- <a href= "login.html">Login page</a>
   <a href= "contact.html">Contact page</a>
@@ -20,7 +37,7 @@
 <main>
     <section class="intro-section">
         <h1>ABOUT ME</h1>
-        <img src="https://drive.google.com/file/d/1AthcMCz1DBWYA6C67KiLxtY0Bhco9eN2/view?usp=sharing" alt="my photo">
+        <img src="myimg.jpg" alt="my photo" id="my_img">
         <p>I am student taking BSc in Informaton Technology at Kibabii University. I am also studying with Zuri and I am passionate of becoming a fullstack developer in the comming future</p>
         <p>I admire how the computer operates and I would like to be the brain about it. In short I have a drema of becoming a software engineer.</p>
       </section>
