more work today

--- a/REPLIT/Login.html
+++ b/REPLIT/Login.html
@@ -9,14 +9,38 @@
 </head>
 
 <body>
-  <form>
-    Email: <input type= "email" maxlength= "20"/><br>
-    Password: <input type= "text" maxlength= "20"/><br>
-  </form>
-  <script src="script.js"></script>
+
+  <main>
+
+
+    <div class="login-form">
+      <form>
+        <h1>Login</h1>
+        <div class="content">
+          <div class="input-field">
+            <input type="email" required placeholder="Email" autocomplete="nope">
+          </div>
+          <div class="input-field">
+            <input type="password" placeholder="Password" required autocomplete="new-password">
+          </div>
+          <a href="#" class="link">Forgot Your Password?</a>
+        </div>
+        <div class="action">
+          <button >Register</button>
+          <button>Sign in</button>
+        </div>
+      </form>
+    </div>
+
+  </main>
+  
+
+<footer class="content-footer">
+  <div>
+    <p>Welcome any time</p>
+  </div>
+</footer>
+
 </body>
-  <footer>
-    <button type="submit" <button style="background-color:blue; border-color:black" id="submit">Sign In</button>
-  </footer>
   
 </html>
