--- a/REPLIT/Contact.html
+++ b/REPLIT/Contact.html
@@ -1,24 +1,50 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
-  <title>Contact Page</title>
-  <link href="style.css" rel="stylesheet" type="text/css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="style.css">
+
 </head>
 
 <body>
-  <form>
-    Name: <input type= "text" maxlength= "20"/><br>
-    Email: <input type= "email" maxlength= "30"/><br>
-    Message: <input type= "text" maxlength= "100"/><br>
+  <main>
 
-  </form>
-  <script src="script.js"></script>
-</body>
-  <footer>
-    <button type="submit" <button style="background-color:blue; border-color:black" id="submit">Submit</button>
+
+
+    <main>
+
+
+      <div class="login-form">
+        <form>
+          <h1>Contact Me</h1>
+          <div class="content">
+            <div class="input-field">
+              <input type="text" required placeholder="Name" autocomplete="nope">
+            </div>
+            <div class="input-field">
+              <input type="email" placeholder="Email" required autocomplete="new-password">
+            </div>
+
+            <textarea class="message formEntry" required placeholder="Message"></textarea>
+            <div class="action">
+              <button style="background-color: rgb(165, 232, 57);">Send</button>
+            </div>
+          </div>
+          </div>
+        </form>
+      </div>
+
+  </main>
+  
+
+  <footer class="content-footer">
+    <div>
+      <p>Welcome any time</p>
+    </div>
   </footer>
+</body>
 
 </html>
