--- a/REPLIT/index.html
+++ b/REPLIT/index.html
@@ -36,13 +36,8 @@
   </header>
 <main>
     <section class="intro-section">
-<<<<<<< HEAD
         <h1>ABOUT ME</h1>
         <img src="myimg.jpg" alt="my photo" id="my_img">
-=======
-        <h1>ABOUT ME </h1>
-        <img src="https://drive.google.com/file/d/1AthcMCz1DBWYA6C67KiLxtY0Bhco9eN2/view?usp=sharing" alt="my photo">
->>>>>>> 4204525036241e090103eae3996c57e1acc35052
         <p>I am student taking BSc in Informaton Technology at Kibabii University. I am also studying with Zuri and I am passionate of becoming a fullstack developer in the comming future</p>
         <p>I admire how the computer operates and I would like to be the brain about it. In short I have a drema of becoming a software engineer.</p>
       </section>
@@ -71,7 +66,9 @@
 </main>
 <footer class="content-footer">
       <p>In case of enquiries please click the button below.</p>
-    <button> <a href="Contact.html"> Contact Me</a></button>
+     <div class="action">
+      <button onclick="location.href='Contact.html'">CONTACT ME</button>
+      </div>
   </footer>
 </body>
 </html>
