--- a/Testimonials_Page/index.html
+++ b/Testimonials_Page/index.html
@@ -1,23 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon"
-    href="https://image.shutterstock.com/image-vector/briefcase-icon-isolated-vector-office-260nw-1721402926.jpg">
+    href="images/code-removebg-preview.png">
+
   <title> Testimonials | Frontend Mentor</title>
+
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="variable.css">
 </head>
+
 <body>
   <h1>Testimonials</h1>
+
   <main class="main">
     <section class="one">
       <figure>
-        <img src="images/image-daniel.jpg" alt="Daniel">
+        <img src="images/myimg.jpg" alt="Daniel">
         <figcaption>
-          <h3 class="name">Daniel Clifford</h3>
-          <h4 class="stats">Verified Graduate</h4>
+          <h3 class="name">Steven Odhiambo</h3>
+          <h4 class="stats">Jnr. Software Developer</h4>
         </figcaption>
       </figure>
       <h2 class="title">
@@ -102,6 +107,7 @@
       </p>
     </section>
   </main>
+
   <footer class="footer">
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
@@ -109,4 +115,5 @@
     </div>
   </footer>
 </body>
+
 </html>
