--- a/REPLIT/HomePage.html
+++ b/REPLIT/HomePage.html
@@ -9,6 +9,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
     <link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="icon"
+    href="images/code-removebg-preview.png">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
