--- a/Simple-Web/html/index.html
+++ b/Simple-Web/html/index.html
@@ -26,7 +26,7 @@
         <section>
             <h2>Here is the time line of Eng. Steve's Life</h2>
             <ul>
-                <li> <strong>1999</strong>-He was born</li>
+                <li> <strong>1999</strong>-Born on this date</li>
                 <li> <strong>2002</strong>-Started Schooling</li>
                 <li> <strong>2017</strong>-Finished grade twelve</li>
                 <li> <strong>2018</strong>-Joined Campus</li>
