--- a/Simple-Web/html/index.html
+++ b/Simple-Web/html/index.html
@@ -14,7 +14,7 @@
         </nav>
     </header>
     <main>
-        <h1>Eng. Steven Odhiambo</h1>
+        <h1>Eng. STEVEN ODHIAMBO</h1>
         <p>I CAN DO WHATEVER I WANT TODAY</p>
         <figure>
             <img src="/assets/WhatsApp_Image_2022-04-25_at_12.43.50_AM-removebg-preview.png" alt="steve_image">
