responsive registration form

--- a/Registration_Form/index.html
+++ b/Registration_Form/index.html
@@ -25,6 +25,26 @@
         </div>
 
         <div class="item_three">
+
+            <form>
+
+                <div class="input">
+                    <input type="email" name="text" placeholder="Jonathan" required />
+                </div>
+                <div class="input">
+                    <input type="email" name="text" placeholder="Last Name" required />
+                </div>
+                <div class="input">
+                    <input type="email" name="email" placeholder="Email Address" required />
+                </div>
+                <div class="input">
+                    <input type="email" name="password" placeholder="Password" required />
+                </div>
+              </form>
+
+              <button>Claim your free trial</button>
+
+              <p>By clicking the button you agree to our <strong style="color: hsl(0, 100%, 74%) ;"> Terms and Services</strong></p>
             
         </div>
 
